Adding auth into project

--- a/WarhammerGameManager.Frontend/Views/Shared/_Layout.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                             <a class="nav-link text-dark loadButton" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
